# asl-translator

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Makefile  README.md  asl-translator.cabal  cabal.project  cabal.project.newbuild
.github/workflows/: ci-matrix.yml
data/: extra_defs.asl  support.asl
data/Parsed/: extra_defs.sexpr
data/parsed/: arm_defs.sexpr  extra_defs.sexpr  support.sexpr
docs/: DESIGN.md
exe/: Concrete.hs  Main.hs
lib/Data/Parameterized/: AssignTree.hs  CtxFuns.hs  SomeSome.hs
lib/Language/: ASL.hs
lib/Language/ASL/: Crucible.hs  Formulas.hs  Globals.hs  Signature.hs  StaticExpr.hs  SyntaxTraverse.hs  Translation.hs  Types.hs
lib/Language/ASL/Crucible/: Exceptions.hs  Extension.hs
lib/Language/ASL/Formulas/: Attach.hs  Normalize.hs  Serialize.hs
lib/Language/ASL/Globals/: ConsistencyCheck.hs  Definitions.hs  Types.hs
lib/Language/ASL/Translation/: Driver.hs  Exceptions.hs  Preprocess.hs
lib/Util/: Log.hs
lib/What4/Expr/: ExprTree.hs
scripts/: test.sh
tests/: Main.hs
tests/Deserialize/: Main.hs
tests/Translation/: Main.hs
travis/: travis.dhall
