cabal-version:       2.2

name:                asl-translator
version:             0.1.0.0
synopsis:            A conversion from ASL into an architecture specification
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Galois Inc.
maintainer:          dmatichuk@galois.com
copyright:           (c) Galois, Inc 2014-2020

extra-source-files:  CHANGELOG.md

data-files:          output/*.what4,
                     archived/*.what4.gz

flag unsafe-operations
  Description: Use unsafe operations (e.g. coercions) to improve performance
  Default: True

flag asl-lite
  Description: Use a trimmed-down set of instructions for the ASL specification (sufficient to disassemble u-boot).
  Default: True

common shared-properties
  default-language:    Haskell2010
  build-depends:       base >=4.10.0.0 && < 5,
                       bv-sized >= 1.0.1 && < 1.1,
                       panic >= 0.3,
                       containers,
                       constraints,
                       dismantle-arm-xml,
                       dismantle-tablegen,
                       hashtables,
                       ilist,
                       integer-logarithms,
                       bimap,
                       text >= 1 && < 2,
                       mtl,
                       transformers,
                       lens,
                       ansi-wl-pprint,
                       parameterized-utils,
                       pretty,
                       crucible,
                       what4,
                       asl-parser,
                       what4-serialize,
                       s-cargot,
                       ordered-containers,
                       split,
                       time,
                       panic >= 0.3,
                       template-haskell,
                       vector,
                       directory,
                       bytestring,
                       zlib

  if flag(unsafe-operations)
    cpp-options: -DUNSAFE_OPS

  if flag(asl-lite)
    cpp-options: -DASL_LITE

library
  import:              shared-properties
  exposed-modules:     Language.ASL
                       Language.ASL.Crucible
                       Language.ASL.Crucible.Extension
                       Language.ASL.Crucible.Exceptions
                       Language.ASL.Signature
                       Language.ASL.Translation
                       Language.ASL.Translation.Preprocess
                       Language.ASL.Translation.Driver
                       Language.ASL.Translation.Exceptions
                       Language.ASL.SyntaxTraverse
                       Language.ASL.Types
                       Language.ASL.Formulas.Serialize
                       Language.ASL.Formulas.Normalize
                       Language.ASL.StaticExpr
                       Language.ASL.Globals
                       Language.ASL.Globals.Types
                       Language.ASL.Globals.Definitions
                       Language.ASL.Globals.ConsistencyCheck
                       Data.Parameterized.CtxFuns
                       Language.ASL.Formulas.Attach
                       Language.ASL.Formulas
                       Util.Log
  other-modules:       Paths_asl_translator
  hs-source-dirs:      lib
  ghc-options:         -Wcompat -Wall

executable asl-translator-exec
  main-is:             Main.hs
  build-depends:       base >=4.10.0.0 && < 5,
                       filepath,
                       what4-serialize,
                       asl-translator,
                       split,
                       text >= 1 && < 2
  hs-source-dirs:      exe
  ghc-options:         -Wcompat -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N"
  default-language: Haskell2010


test-suite asl-translator-genarm-test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests/Translation
  default-language: Haskell2010
  build-depends:       base >= 4.10.0.0 && < 5,
                       filepath,
                       what4-serialize,
                       asl-translator
  main-is: Main.hs

test-suite asl-translator-formula-test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests/Deserialize
  default-language: Haskell2010
  build-depends:       base >= 4.10.0.0 && < 5,
                       containers,
                       what4,
                       parameterized-utils,
                       asl-translator
  main-is: Main.hs

  if flag(asl-lite)
    cpp-options: -DASL_LITE

executable asl-translator-concrete-test
  main-is: Concrete.hs
  build-depends:       base >= 4.10.0.0 && < 5,
                       bv-sized >= 1.0.0,
                       filepath,
                       what4-serialize,
                       what4,
                       parameterized-utils,
                       asl-translator,
                       text,
                       containers,
                       random
  hs-source-dirs: exe
  ghc-options:         -Wcompat -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N"
  default-language: Haskell2010
