cabal-version:       2.2

name:                asl-translator
version:             0.1.0.0
synopsis:            A conversion from ASL into an architecture specification
description:
  Tools and libraries to convert from an XML-defined ASL into a specific architecture specification.
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Galois Inc.
maintainer:          dmatichuk@galois.com
copyright:           (c) Galois, Inc 2014-2020
category:            Language

extra-source-files:  CHANGELOG.md

data-files:          archived/*.what4.gz

flag unsafe-operations
  Description: Use unsafe operations (e.g. coercions) to improve performance
  Default: True

flag asl-lite
  Description: Use a trimmed-down set of instructions for the ASL specification (sufficient to disassemble u-boot).
  Default: False

common shared-properties
  default-language:    Haskell2010
  build-depends:       base >=4.13.0.0 && < 5,
                       bv-sized >= 1.0.1 && < 1.1,
                       panic >= 0.3,
                       containers,
                       constraints,
                       dismantle-arm-xml,
                       dismantle-tablegen,
                       filepath,
                       hashtables,
                       ilist,
                       integer-logarithms,
                       bimap,
                       text >= 1 && < 2.1,
                       mtl,
                       transformers,
                       lens,
                       parameterized-utils >= 2.1.1,
                       pretty,
                       prettyprinter >= 1.7.0,
                       crucible,
                       what4,
                       asl-parser,
                       s-cargot,
                       ordered-containers,
                       split,
                       time,
                       panic >= 0.3,
                       template-haskell >= 2.15,
                       th-compat >= 0.1 && < 0.2,
                       vector,
                       directory,
                       bytestring,
                       unliftio-core,
                       zlib

  if flag(unsafe-operations)
    cpp-options: -DUNSAFE_OPS

  if flag(asl-lite)
    cpp-options: -DASL_LITE

library
  import:              shared-properties
  exposed-modules:     Language.ASL
                       Language.ASL.Crucible
                       Language.ASL.Crucible.Extension
                       Language.ASL.Crucible.Exceptions
                       Language.ASL.Signature
                       Language.ASL.Translation
                       Language.ASL.Translation.Preprocess
                       Language.ASL.Translation.Driver
                       Language.ASL.Translation.Exceptions
                       Language.ASL.SyntaxTraverse
                       Language.ASL.Types
                       Language.ASL.Formulas.Serialize
                       Language.ASL.Formulas.Normalize
                       Language.ASL.StaticExpr
                       Language.ASL.Globals
                       Language.ASL.Globals.Types
                       Language.ASL.Globals.Definitions
                       Language.ASL.Globals.ConsistencyCheck
                       Data.Parameterized.CtxFuns
                       Data.Parameterized.AssignTree
                       Data.Parameterized.SomeSome
                       Language.ASL.Formulas.Attach
                       Language.ASL.Formulas
                       Util.Log
                       What4.Expr.ExprTree
  autogen-modules:     Paths_asl_translator
  other-modules:       Paths_asl_translator
  hs-source-dirs:      lib
  ghc-options:         -Wcompat -Wall

executable asl-translator-exec
  main-is:             Main.hs
  build-depends:       base >=4.10.0.0 && < 5,
                       what4,
                       asl-translator,
                       split,
                       text >= 1 && < 2.1
  hs-source-dirs:      exe
  ghc-options:         -Wcompat -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N"
  default-language: Haskell2010


test-suite asl-translator-genarm-test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests/Translation
  default-language: Haskell2010
  build-depends:       base >= 4.10.0.0 && < 5,
                       what4,
                       asl-translator
  main-is: Main.hs

test-suite asl-translator-formula-test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests/Deserialize
  default-language: Haskell2010
  build-depends:       base >= 4.10.0.0 && < 5,
                       containers,
                       what4,
                       parameterized-utils,
                       asl-translator
  main-is: Main.hs

  if flag(asl-lite)
    cpp-options: -DASL_LITE

executable asl-translator-concrete-test
  main-is: Concrete.hs
  build-depends:       base >= 4.10.0.0 && < 5,
                       bv-sized,
                       libBF >= 0.6 && < 0.7,
                       what4,
                       parameterized-utils,
                       asl-translator,
                       text,
                       containers,
                       random
  hs-source-dirs: exe
  ghc-options:         -Wcompat -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N"
  default-language: Haskell2010
